--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
